--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name="com.app.ecommerce.MainActivity" >
+        <activity android:name="com.app.ecommerce.Home3.HomeThree" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
