--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:3.0.2'
     implementation 'com.google.android.gms:play-services-location:11.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.5.0'
+    implementation  'me.relex:circleindicator:1.2.2@aar'
 
     // retrofit, gson
     implementation 'com.google.code.gson:gson:2.6.2'
