--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
 
     implementation 'q.rorbin:badgeview:1.1.3'
     implementation 'com.facebook.android:facebook-android-sdk:4.28.0'
-
+    implementation 'com.mindorks:placeholderview:0.2.7'
 
 
 
