--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,15 @@ dependencies {
     })
     testImplementation 'junit:junit:4.12'
 
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.mindorks:placeholderview:0.2.7'
+    //----------------------------------------------------------------sorting-----
+    implementation 'com.mindorks.android:placeholderview:1.0.3'
+    annotationProcessor 'com.mindorks.android:placeholderview-compiler:1.0.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //----------------------------------------------------------------------------
     implementation 'com.amitshekhar.android:android-networking:1.0.0'
    implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
@@ -63,7 +68,6 @@ dependencies {
 
     implementation 'q.rorbin:badgeview:1.1.3'
     implementation 'com.facebook.android:facebook-android-sdk:4.28.0'
-    implementation 'com.mindorks:placeholderview:0.2.7'
 
 
 
