--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="com.app.ecommerce.Home.HomePage"
+            android:name="com.app.ecommerce.Home.HomeCategory"
             android:label="Home Page"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -49,7 +49,7 @@
         </activity>
         <activity
             android:name="com.app.ecommerce.Wishlist.WishListHolder"
-            android:label="Home Category"
+            android:label="Wishlist"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
@@ -57,8 +57,8 @@
         </activity>
 
         <activity
-            android:name="com.app.ecommerce.Home.HomeCategory"
-            android:label="Home Category"
+            android:name="com.app.ecommerce.Home.ProductDetailHome"
+            android:label="Home Product"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
@@ -332,7 +332,7 @@
         </activity>
 
         <activity
-            android:name="com.app.ecommerce.productDetial"
+            android:name="com.app.ecommerce.ProductDetails_act"
             android:label="Product Title"
             android:theme="@style/AppTheme">
             <intent-filter>
