--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="com.app.ecommerce.Home.HomeCategory"
+            android:name="com.app.ecommerce.ContactUs"
             android:label="Home Page"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -48,13 +48,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.app.ecommerce.Wishlist.WishListHolder"
+            android:name="com.app.ecommerce.Home.HomeCategory"
             android:label="Wishlist"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+        android:name="com.app.ecommerce.Wishlist.WishListHolder"
+        android:label="Wishlist"
+        android:theme="@style/AppTheme">
+        <intent-filter>
+            <action android:name="android.intent.action.DEFAULT" />
+        </intent-filter>
+    </activity>
 
         <activity
             android:name="com.app.ecommerce.Home.ProductDetailHome"
