--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -69,7 +70,7 @@ dependencies {
     implementation 'q.rorbin:badgeview:1.1.3'
     implementation 'com.facebook.android:facebook-android-sdk:4.28.0'
 
-
+    implementation 'com.android.support:multidex:1.0.0'
 
 }
 
