--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             </intent-filter>
         </activity>
        <activity
-            android:name="com.app.ecommerce.ContactUs"
+            android:name="com.app.ecommerce.PrivacyPolicy"
             android:label="Contact Us"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -63,7 +63,7 @@
                 <action android:name="android.intent.action.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity
+       <activity
         android:name="com.app.ecommerce.Wishlist.WishListHolder"
         android:label="Wishlist"
         android:theme="@style/AppTheme">
@@ -119,7 +119,16 @@
 
 
         <activity
-            android:name="com.app.ecommerce.contact"
+            android:name="com.app.ecommerce.ContactUs"
+            android:label="Contact Us"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.TermsConditions"
             android:label="Contact Us"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -138,7 +147,7 @@
 
 
         <activity
-            android:name="com.app.ecommerce.about"
+            android:name="com.app.ecommerce.AboutUs"
             android:label="About Us"
             android:theme="@style/AppTheme">
             <intent-filter>
