--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="com.app.ecommerce.Home.ProductDetailHome"
+            android:name="com.app.ecommerce.Home.HomePage"
             android:label="Home Page"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -47,32 +47,35 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-       <activity
-            android:name="com.app.ecommerce.PrivacyPolicy"
+
+        <activity
+            android:name="com.app.ecommerce.ContactUs"
             android:label="Contact Us"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <!--<activity-->
+        <!--android:name="com.app.ecommerce.Home.HomePage"-->
+        <!--android:label="Home Category"-->
+        <!--android:theme="@style/AppTheme">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.DEFAULT" />-->
+        <!--</intent-filter>-->
+        <!--</activity>-->
+
         <activity
-            android:name="com.app.ecommerce.Home.HomePage"
-            android:label="Home Category"
+            android:name="com.app.ecommerce.Wishlist.WishListHolder"
+            android:label="Wishlist"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
             </intent-filter>
         </activity>
-       <activity
-        android:name="com.app.ecommerce.Wishlist.WishListHolder"
-        android:label="Wishlist"
-        android:theme="@style/AppTheme">
-        <intent-filter>
-            <action android:name="android.intent.action.DEFAULT" />
-        </intent-filter>
-    </activity>
 
-       <!-- <activity
+        <activity
             android:name="com.app.ecommerce.Home.ProductDetailHome"
             android:label="Home Product"
             android:theme="@style/AppTheme">
@@ -80,7 +83,7 @@
                 <action android:name="android.intent.action.DEFAULT" />
             </intent-filter>
         </activity>
--->
+
         <activity
             android:name="com.app.ecommerce.Home2.HomeTwo"
             android:label="Home Two"
@@ -119,16 +122,7 @@
 
 
         <activity
-            android:name="com.app.ecommerce.ContactUs"
-            android:label="Contact Us"
-            android:theme="@style/AppTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name="com.app.ecommerce.TermsConditions"
+            android:name="com.app.ecommerce.contact"
             android:label="Contact Us"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -147,7 +141,7 @@
 
 
         <activity
-            android:name="com.app.ecommerce.AboutUs"
+            android:name="com.app.ecommerce.about"
             android:label="About Us"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -328,7 +322,7 @@
 
 
         <activity
-            android:name="com.app.ecommerce.delivery"
+            android:name="com.app.ecommerce.Delivery"
             android:label="Delivery"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -462,6 +456,142 @@
             </intent-filter>
         </activity>
 
-    </application>
 
+        <!-- New Section-->
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.Login_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.SignUp_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.MyProfile_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.EditProfile_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.Navmenu_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.MyAddress_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.MyWallet_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.Offers_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.RefersAndEarn_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.RateUs_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.AboutAndContactUs_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.Faqs_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.TermsAndCondition_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.GoogleFeedback_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.app.ecommerce.ProfileSection.Policy_act"
+            android:label="Login_act"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+    </application>
 </manifest>
