--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -280,7 +280,7 @@
 
         <activity
             android:name="com.nisarga.nisargaveggiez.MyOrder.OrderDetailsHolder"
-            android:label="ReOrders"
+            android:label="Order Details"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.DEFAULT" />
